# Copyright (C) 2017-2021 Veronique Geoffroy (veronique.geoffroy@inserm.fr)                                #
#                                                                                                          #
############################################################################################################


For more details, please see the README file.

	- feat: Add bugfix concerning the use of the "split" annotationMode
	- feat: Last column of the SV input BED file could not have empty values. Replaced with "."
	- feat: Add bugfix to avoid a segmentation fault error with the RE_gene calculation
	- feat: Update of the user header (user column names could not be empty anymore)
	- feat: Definition of the characters used to separate the annotations
	- feat: Add bugfix in section 5 of the SV ranking
	- feat: Set the ACMG_class to "NA" if not defined
	
December 18, 2020, AnnotSV version 3.0
	- Major code rewrite and annotations sources reorganization
		- Significant modification of the annotations column names
	- New SV ranking based on the ACMG guidelines (Riggs et al 2020) as a replacement of the previous ranking (v2.5).
		- Add 3 annotation columns: AnnotSV ranking score; ranking decision criteria; AnnotSV ranking class
	- Merge pathogenic SV annotation (from multiple sources)
		- Pathogenic SV sources: dbVar, ClinGen, ClinVar, OMIM morbid genes
		- Add 12 annotation columns: 
		  P_gain_phen; P_gain_hpo; P_gain_source; P_gain_coord; 
		  P_loss_phen; P_loss_hpo; P_loss_source; P_loss_coord; 
		  P_ins_phen; P_ins_hpo; P_ins_source; P_ins_coord; 
		  P_inv_phen; P_inv_hpo; P_inv_source; P_inv_coord
		- Remove previous annotation columns from dbVar
	- Merge benign SV annotation (from multiple sources)
		- Benign SV sources: DGV, ClinVar, ClinGen, DDD, gnomAD, 1000g and IMH
		- Add 8 annotation columns: 
		  B_gain_source; B_gain_coord; B_loss_source; B_loss_coord; 
		  B_ins_source; B_ins_coord; B_inv_source; B_inv_coord