@@ -257,9 +257,15 @@ proc OrganizeAnnotation {} {
     ####### "Ranking header"
     if {$g_AnnotSV(svtTSVcol) eq -1 && $g_AnnotSV(organism) eq "Human"} { ; # SV_type is required for the ranking of human SV
 	puts "\nWARNING: AnnotSV requires the SV type (duplication, deletion...) to classify the SV"
-	puts "Not provided (svtBEDcol = -1)"
-	puts "=> No SV ranking"
+	puts "         Not provided (svtBEDcol = -1)"
+	puts "         => No SV ranking (ACMG_class feature will be set to \"NA\")"
 	set g_AnnotSV(ranking) 0
+
+	if {![regexp "NA" $g_AnnotSV(rankFiltering)]} {
+	    puts "\nWARNING: -rankFiltering = $g_AnnotSV(rankFiltering)"
+	    puts "         => SV with \"ACMG_class = NA\" will be filtered out"
+	    puts "         => All the SV will be filtered out\n"
+	}
     }
     append headerOutput "\tAnnotSV_ranking_score"
     append headerOutput "\tAnnotSV_ranking_criteria"
@@ -1208,9 +1214,8 @@ proc OrganizeAnnotation {} {
 		set g_ACMGclass($AnnotSV_ID,full) "full=$class"
 
 		# To select the SV of a user-defined specific class (from 1 to 5)
-		# default : $g_AnnotSV(rankFiltering) == {1 2 3 4 5}
-		# Warning: no filtering needed by default => keep class == "NA"
-		if {$g_AnnotSV(rankFiltering) ne {1 2 3 4 5} && [lsearch -exact $g_AnnotSV(rankFiltering) $class] eq -1} {
+		# default : $g_AnnotSV(rankFiltering) == {1 2 3 4 5 NA}
+		if {[lsearch -exact $g_AnnotSV(rankFiltering) $class] eq -1} {
 		    continue
 		}
 
@@ -1221,7 +1226,7 @@ proc OrganizeAnnotation {} {
 	    } else {
 		# To select the SV of a user-defined specific class (from 1 to 5)
 		regsub "full=" $g_ACMGclass($AnnotSV_ID,full) "" class
-		if {$g_AnnotSV(rankFiltering) ne {1 2 3 4 5} && [lsearch -exact $g_AnnotSV(rankFiltering) $class] eq -1} {
+		if {[lsearch -exact $g_AnnotSV(rankFiltering) $class] eq -1} {
 		    continue
 		} 
 		
